Updated JUnit tests